# utcomputer

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Projet.pro  README.md  README_8md.html  addition_8h_source.html  appveyor.yml  atom_8h.html  atom_8h__dep__incl.map  atom_8h__dep__incl.md5  atom_8h__incl.map  classAdditionOperator.html  classAtomLiteralDefinition.js  classAtomLiteralDefinition__coll__graph.map  classAtomLiteralDefinition__coll__graph.md5  classCommaLiteralDefinition-members.html  classCommaLiteralDefinition.html  classCommaLiteralDefinition__coll__graph.map  classCommaLiteralDefinition__inherit__graph.map  classCommaLiteralDefinition__inherit__graph.md5  classDenominatorOperator__coll__graph.map  classDivisionOperator.js  classDivisionOperator__coll__graph.map  classDumper.html  classDumper.js  classEuclidianDivisionOperator.html  classEuclidianDivisionOperator.js  classEuclidianDivisionOperator__coll__graph.md5  classEvalOperator.html  classEvalOperator.js  classEvalOperator__coll__graph.md5  classEvalOperator__inherit__graph.map  classExpressionLiteralDefinition-members.html  classExpressionLiteralDefinition__coll__graph.md5  classForgetOperator-members.html  classForgetOperator.html  classForgetOperator__coll__graph.md5  classFraction-members.html  (+623 more)
doc/: README_8md.html  addition_8h.html  addition_8h__dep__incl.map  addition_8h__dep__incl.md5  addition_8h__incl.map  addition_8h__incl.md5  addition_8h_source.html  annotated.html  annotated_dup.js  atom_8h.html  atom_8h.js  atom_8h__dep__incl.map  atom_8h__dep__incl.md5  atom_8h__incl.map  atom_8h__incl.md5  atom_8h_source.html  bug.html  classAdditionOperator-members.html  classAdditionOperator.html  classAdditionOperator.js  classAdditionOperator__inherit__graph.map  classAdditionOperator__inherit__graph.md5  classAtomLiteralDefinition-members.html  classAtomLiteralDefinition.html  classAtomLiteralDefinition__coll__graph.map  classAtomLiteralDefinition__coll__graph.md5  classCommaLiteralDefinition-members.html  classCommaLiteralDefinition.html  classCommaLiteralDefinition.js  classCommaLiteralDefinition__inherit__graph.md5  classDenominatorOperator-members.html  classDenominatorOperator.html  classDenominatorOperator.js  classDenominatorOperator__inherit__graph.md5  classDivisionOperator-members.html  classDivisionOperator.html  classDivisionOperator__coll__graph.md5  classDumper-members.html  classDumper.html  classDumper__coll__graph.map  (+968 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_10.js  classes_13.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  files_0.js  files_10.js  (+58 more)
lib/: lexer.cpp  lexer.h  resolver.cpp  resolver.h  runner.cpp  runner.h  utcomputer.cpp  utcomputer.h
lib/debug/: dumper.cpp  dumper.h  tokens_dumper.cpp  tokens_dumper.h
lib/exception/: invalid_operand.cpp  invalid_operand.h  invalid_syntax.cpp  invalid_syntax.h  runtime.h  undefined_atom.cpp  undefined_atom.h  unspported_literal.cpp  unspported_literal.h
lib/literal/: atom.h  comma.h  expression.h  hook.h  interface.h  numeric.cpp  numeric.h  operator.h  parenthesis.h  program.h  stack.h  whitespace.h
lib/literal_definition/: atom.h  comma.cpp  comma.h  expression.h  hook.h  interface.h  numeric.cpp  numeric.h  operator.h  operator_atom_literal.h  operator_equal_comparison.h  operator_numeric.h  operator_strict_comparison.h  parenthesis.h  program.h  whitespace.cpp  whitespace.h
lib/math/: fraction.h  math.cpp  math.h
lib/messages/: message.h
lib/operator/: addition.cpp  addition.h  denominator.cpp  denominator.h  division.cpp  division.h  euclidian_division.cpp  euclidian_division.h  eval.cpp  eval.h  forget.cpp  forget.h  interface.h  logic_and.cpp  logic_and.h  logic_different.cpp  logic_different.h  logic_equals.cpp  logic_equals.h  logic_greater.cpp  logic_greater.h  logic_greater_equals.cpp  logic_greater_equals.h  logic_lesser.cpp  logic_lesser.h  logic_lesser_equals.cpp  logic_lesser_equals.h  logic_not.cpp  logic_not.h  logic_or.cpp  logic_or.h  modulo.cpp  modulo.h  multiplication.cpp  multiplication.h  numerator.cpp  numerator.h  numeric_complex_build.cpp  numeric_complex_build.h  numeric_complex_imaginary.cpp  (+33 more)
lib/repository/: hashmap.h  interface.cpp  interface.h  literals.h  map.h  messages.h  observable.cpp  observable.h  operators.h  programs.h  stack.h  variables.h
literal/: atom.h  complex.h  expression.h  int.h  interface.h  literal_interface.cpp  literal_interface.h  program.h  rationnal.cpp  rationnal.h  real.h
repository/: literals.cpp  literals.h  messages.h  operators.h  programs.h  repository_interface.cpp  repository_interface.h  variables.h
res/: global_architecture.vsdx  rapport.docx  usage_process.vsdx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_4.js  all_6.js  all_8.js  all_b.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_b.js  files_c.js  files_e.js  files_f.js  functions_0.js  functions_10.js  (+27 more)
ui/: historyTreeView.cpp  historyTreeView.h  history_tree_view.cpp  history_tree_view.h  keyboardWidget.cpp  keyboardWidget.h  keyboard_widget.cpp  keyboard_widget.h  main.cpp  main.h  messageTreeView.cpp  messageTreeView.h  message_tree_view.cpp  message_tree_view.h  programWidget.cpp  programWidget.h  repositoryWidget.cpp  repositoryWidget.h  repository_widget.cpp  repository_widget.h  stackWidget.cpp  stackWidget.h  stack_widget.cpp  stack_widget.h  variableWidget.cpp  variableWidget.h  variable_widget.cpp  variable_widget.h
(+70 files in other folders)
